@@ -48,6 +48,17 @@ Define the delay in millisecond of mouse inactivity before displaying
 the balloon.
 </DD>
 </DL>
+<dl>
+    <dt><a name="DynamicHelp-state"><b>-state</b></a></dt>
+    <dd>
+    Specifies one of two states for help balloons: <b>normal</b> and
+    <b>disabled</b>.
+    </dd>
+    <dd>
+    If <b>state</b> is <b>disabled</b>, help balloons will not be displayed
+    for any registered widget.
+    </dd>
+</dl>
 <BR>Other standard options are:
 <DD><TABLE CELLSPACING=0 CELLSPACING=0 BORDER=0>
 <TR>
