@@ -43,46 +43,49 @@
 <DD><TABLE CELLSPACING=0 CELLSPACING=0 BORDER=0>
 <TR>
 <TD>&nbsp;&nbsp;<A HREF="#-closecmd">-closecmd</A></TD>
+<TD>&nbsp;&nbsp;<A HREF="#-crossfill">-crossfill</A></TD>
+</TR>
+<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-deltax">-deltax</A></TD>
-</TR>
-<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-deltay">-deltay</A></TD>
+</TR>
+<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-dragenabled">-dragenabled</A></TD>
-</TR>
-<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-dragendcmd">-dragendcmd</A></TD>
+</TR>
+<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-dragevent">-dragevent</A></TD>
-</TR>
-<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-draginitcmd">-draginitcmd</A></TD>
+</TR>
+<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-dragtype">-dragtype</A></TD>
-</TR>
-<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-dropcmd">-dropcmd</A></TD>
+</TR>
+<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-dropenabled">-dropenabled</A></TD>
+<TD>&nbsp;&nbsp;<A HREF="#-dropovercmd">-dropovercmd</A></TD>
 </TR>
 <TR>
-<TD>&nbsp;&nbsp;<A HREF="#-dropovercmd">-dropovercmd</A></TR>
-<TD>&nbsp;&nbsp;<A HREF="#-dropovermode">-dropovermode</A></TR>
-</TR>
-<TR>
+<TD>&nbsp;&nbsp;<A HREF="#-dropovermode">-dropovermode</A></TD>
 <TD>&nbsp;&nbsp;<A HREF="#-droptypes">-droptypes</A></TD>
+</TR>
+<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-height">-height</A></TD>
-</TR>
-<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-linesfill">-linesfill</A></TD>
+</TR>
+<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-linestipple">-linestipple</A></TD>
-</TR>
-<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-opencmd">-opencmd</A></TD>
+</TR>
+<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-padx">-padx</A></TD>
-</TR>
-<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-redraw">-redraw</A></TD>
-<TD>&nbsp;&nbsp;<A HREF="#-selectcommand">-selectcommand</A></TD>
 </TR>
 <TR>
+<TD>&nbsp;&nbsp;<A HREF="#-selectcommand">-selectcommand</A></TD>
 <TD>&nbsp;&nbsp;<A HREF="#-showlines">-showlines</A></TD>
+</TR>
+<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-width">-width</A></TD>
 </TR>
 </TABLE></DD>
@@ -198,6 +201,14 @@ closed node is appended to the command.
 
 </DD>
 </DL>
+
+<DL>
+    <DT><A NAME="-crossfill"><B>-crossfill</B></A></DT>
+    <DD>
+    Specifies a foreground color for the cross bitmap.
+    </DD>
+</DL>
+
 <DL><DT><A NAME="-deltax"><B>-deltax</B></A></DT>
 <DD>
 
